added form validation

--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -2,65 +2,100 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:insert="fragment/head.html :: headerfiles">
-  <meta charset="UTF-8" />
-  <title>Forgot Password?</title>
+	<meta charset="UTF-8" />
+	<title>Forgot Password?</title>
 </head>
 
 <body>
-  <header class="container header__container" th:replace="fragment/header.html :: header"></header>
-  <div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
-  <section>
-    <div class="container login__container">
-      <div class="login__left">
-        <img th:src="@{'photos/register.png'}" alt="image" />
-      </div>
-      <div class="login__right">
-        <div class="heading__background">
-          <a th:href="@{/login}">
-            <h2>Login</h2>
-          </a>
-          <a th:href="@{/register}">
-            <h2>Sign Up</h2>
-          </a>
-        </div>
-        <form th:action="@{/updatepassword}" method="post">
-          <input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}" hidden
-            readonly />
-          <input class="input__box" type="password" placeholder="New Password" name="password" id="new" required />
-          <input class="input__box" type="password" placeholder="Re-enter Password" name="cpassword" id="again"
-            required />
-          <span class="input__box" id="message" style="
-                color: red;
-                font-size: 12px;
-                padding-top: 0px;
-                background-color: transparent;
-              "></span>
+	<header class="container header__container" th:replace="fragment/header.html :: header"></header>
+	<div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
+	<section>
+		<div class="container login__container">
+			<div class="login__left">
+				<img th:src="@{'/images/sanolagani logo.png'}" alt="image" />
+			</div>
+			<div class="login__right">
+				<div class="heading__background">
+					<a th:href="@{/login}">
+						<h2>Login</h2>
+					</a>
+					<a th:href="@{/register}">
+						<h2>Sign Up</h2>
+					</a>
+				</div>
+				<form th:action="@{/updatepassword}" method="post" id="signup-form">
+					<input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}"
+						hidden readonly />
+					<input class="input__box" type="password" placeholder="New Password" name="password" id="new"
+						required />
+					<input class="input__box" type="password" placeholder="Re-enter Password" name="cpassword"
+						id="again" required />
+					<span id="message"style="color:red; font-size:12px; padding-top: 0px; background-color: transparent;">&nbsp;</span>
 
-          <input class="btn btn-primary btn__login" id="submit" type="submit" value="Change Password" required />
-        </form>
-      </div>
-    </div>
-  </section>
-  <footer th:replace="/fragment/footer :: footer"></footer>
+					<input class="btn btn-primary btn__login" id="submitBtn" type="submit" value="Change Password"
+						required />
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer th:replace="/fragment/footer :: footer"></footer>
 </body>
-<script type="text/javascript">
-  let again = document.getElementById("again");
-  again.addEventListener("keyup", matchPassword);
-  var submit = document.getElementById("submit");
-  submit.disabled = true;
-  function matchPassword() {
-    var pass1 = document.getElementById("new").value;
-    var pass2 = document.getElementById("again").value;
-    var error = document.getElementById("message");
-    error.innerText = "Enter identical password on both fields.";
+<!-- <script th:src="@{/js/validate.js}" type="text/javascript"></script> -->
 
-    if (pass1 === pass2) {
-      error.innerText = "";
-      submit.disabled = false;
-    }else{
-      submit.disabled = true;
-    }
-  }
+<script>
+	var signup = document.getElementById("signup-form");
+	var submitBtn = document.getElementById("submitBtn");
+	var error = document.getElementById("message");
+	var password = document.getElementById('password');
+	var cpassword = document.getElementById('cpassword');
+	cpassword.addEventListener("keyup", matchPassword);
+
+
+	function matchPassword() {
+		error.innerText = "Enter identical password on both fields.";
+		let pass = password.value;
+		let cpass = cpassword.value;
+		document.getElementById('message').innerHTML = " ";
+		if (pass === cpass) {
+			error.innerText = " ";
+			submitBtn.disabled = false;
+		}
+		else {
+			error.innerText = "Enter identical password on both fields.";
+			submitBtn.disabled = true;
+		}
+	}
+	signup.addEventListener('submit', e => {
+		e.preventDefault();
+		if (registerValidate() == true) {
+			signup.submit();
+		}
+	});
+
+	registerValidate = () => {
+		let pass = password.value;
+		let cpass = cpassword.value;
+
+		let passwordcheck = /^(?=.*[0-9])(?=.*[!@#$%^*])[a-zA-Z0-9!@#$%^&*]{8,16}$/;
+
+		if (pass.length < 8) {
+			document.getElementById('message').innerHTML = "** Password must be at least 8 characters";
+			return false;
+		}
+		if (passwordcheck.test(pass)) {
+			document.getElementById('message').innerHTML = " ";
+		} else {
+			document.getElementById('message').innerHTML = "** A valid must contain atleast 1 number and 1 special character";
+			return false;
+		}
+
+		if (pass !== cpass) {
+			document.getElementById('message').innerHTML = "** Password Not matched";
+			return false;
+		}
+		document.getElementById('message').innerHTML = " ";
+		return true;
+	}
 </script>
 
 </html>
