--- a/src/main/resources/templates/forgotpassword.html
+++ b/src/main/resources/templates/forgotpassword.html
@@ -2,17 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:insert="fragment/head.html :: headerfiles">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Forgot Password?</title>
 </head>
 
 <body>
-    <header class='container header__container' th:replace="fragment/header.html :: header"></header>
-    <div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
+    <header class="container header__container" th:replace="fragment/header.html :: header"></header>
+    <div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
     <section>
         <div class="container login__container">
             <div class="login__left">
-                <img th:src="@{'photos/register.png'}" alt="image" />
+                <img th:src="@{'/images/sanolagani logo.png'}" alt="image" />
             </div>
             <div class="login__right">
                 <div class="heading__background">
@@ -23,35 +23,74 @@
                         <h2>Sign Up</h2>
                     </a>
                 </div>
-                <form th:action="@{/processlogin}" method="post">
-
-                    <input class='input__box' type="password" placeholder='New Password' name="password" id="new"
+                <form th:action="@{/processlogin}" method="post" id="signup-form">
+                    <input class="input__box" type="password" placeholder="New Password" name="password" id="password"
                         required />
-                    <input class='input__box' type="password" placeholder='Re-enter Password' name="password" id="again"
-                        required />
-                    <span class="input__box" id="message"
-                        style="color:red; font-size:12px; padding-top: 0px; background-color: transparent;"></span>
+                    <input class="input__box" type="password" placeholder="Re-enter Password" name="password"
+                        id="cpassword" required />
+                    <span id="message" style="color:red; font-size:12px; padding-top: 0px; background-color: transparent;">&nbsp;</span>
 
-                    <input class='btn btn__login' type="submit" value='Change Password' required />
+                    <input class="btn btn__login" type="submit" value="Change Password" id="submitBtn"/>
                 </form>
-
             </div>
         </div>
     </section>
 </body>
-<script type="text/javascript">
-    let again = document.getElementById("again");
-    again.addEventListener("keyup", matchPassword);
-    function matchPassword() {
-        var pass1 = document.getElementById("new").value;
-        var pass2 = document.getElementById("again").value;
-        var error = document.getElementById("message");
-        error.innerText = "Enter identical password on both fields.";
+<!-- <script th:src="@{/js/validate.js}" type="text/javascript"></script> -->
+<script>
+    var signup = document.getElementById("signup-form");
+    var submitBtn = document.getElementById("submitBtn");
+    var error = document.getElementById("message");
+    var password = document.getElementById("password");
+    var cpassword = document.getElementById("cpassword");
+    cpassword.addEventListener("keyup", matchPassword);
 
-        if (pass1 === pass2) {
-            error.innerText = "";
+    function matchPassword() {
+        error.innerText = "Enter identical password on both fields.";
+        let pass = password.value;
+        let cpass = cpassword.value;
+        if (pass === cpass) {
+            error.innerText = " ";
+            submitBtn.disabled = false;
+        } else {
+            submitBtn.disabled = true;
         }
     }
+    signup.addEventListener("submit", (e) => {
+        e.preventDefault();
+        if (registerValidate() == true) {
+            signup.submit();
+        }
+    });
+
+    registerValidate = () => {
+        let pass = password.value;
+        let cpass = cpassword.value;
+
+        let passwordcheck =
+            /^(?=.*[0-9])(?=.*[!@#$%^*])[a-zA-Z0-9!@#$%^&*]{8,16}$/;
+        if (pass.length < 8) {
+            document.getElementById("message").innerHTML =
+                "** Password must be atleast 8 characters";
+            return false;
+        }
+        if (passwordcheck.test(pass)) {
+            document.getElementById("message").innerHTML = " ";
+        } else {
+            document.getElementById("message").innerHTML =
+                "** A valid must contain atleast 1 number and 1 special character";
+            return false;
+        }
+
+
+        if (pass !== cpass) {
+            document.getElementById("message").innerHTML =
+                "** Password Not matched";
+            return false;
+        }
+        console.log("success");
+        return true;
+    };
 </script>
 
 </html>
