--- a/src/main/resources/templates/changeinitialpassword.html
+++ b/src/main/resources/templates/changeinitialpassword.html
@@ -2,59 +2,100 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:insert="fragment/head.html :: headerfiles">
-  <meta charset="UTF-8" />
-  <title>Forgot Password?</title>
+	<meta charset="UTF-8" />
+	<title>Forgot Password?</title>
 </head>
 
 <body>
-  <header class="container header__container" th:replace="fragment/header.html :: header"></header>
-  <div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
-  <section>
-    <div class="container login__container">
-      <div class="login__left">
-        <img th:src="@{'photos/register.png'}" alt="image" />
-      </div>
-      <div class="login__right">
-        <form th:action="@{/change/initial/password}" method="post">
-          <h1 class="login__heading" style="text-decoration: underline; margin-bottom: 30px; letter-spacing: 0.5px;">Change Password</h1>
-          <input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}" hidden
-            readonly />
-          <input class="input__box" type="password" placeholder="Old Password" name="oldpassword" id="old" required />
-          <input class="input__box" type="password" placeholder="New Password" name="password" id="new" required />
-          <input class="input__box" type="password" placeholder="Re-enter Password" name="cpassword" id="again"
-            required />
-          <span class="input__box" id="message" style="
-                color: red;
-                font-size: 12px;
-                padding-top: 0px;
-                background-color: transparent;
-              "></span>
+	<header class="container header__container" th:replace="fragment/header.html :: header"></header>
+	<div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
+	<section>
+		<div class="container login__container">
+			<div class="login__left">
+				<img th:src="@{'/images/sanolagani logo.png'}" alt="image" />
+			</div>
+			<div class="login__right">
+				<form th:action="@{/change/initial/password}" method="post" id="signup-form">
+					<h1 class="login__heading" style="
+                text-decoration: underline;
+                margin-bottom: 30px;
+                letter-spacing: 0.5px;
+              ">
+						Change Password
+					</h1>
+					<input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}"
+						hidden readonly />
+					<input class="input__box" type="password" placeholder="Old Password" name="oldpassword" id="old"
+						required />
+					<input class="input__box" type="password" placeholder="New Password" name="password" id="password"
+						required />
+					<input class="input__box" type="password" placeholder="Re-enter Password" name="cpassword"
+						id="cpassword" required />
+					<span id="message" style="color:red; font-size:12px; padding-top: 0px; background-color: transparent;">&nbsp;</span>
 
-          <input class="btn btn-primary btn__login" id="submit" type="submit" value="Change Password" required />
-        </form>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <footer th:insert="fragment/footer.html :: footer"></footer>
-  </footer>
+					<input class="btn btn-primary btn__login" id="submitBtn" type="submit" value="Change Password"
+						required />
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<footer th:insert="fragment/footer.html :: footer"></footer>
+	</footer>
 </body>
-<script type="text/javascript">
-  let again = document.getElementById("again");
-  again.addEventListener("keyup", matchPassword);
-  var submit = document.getElementById("submit");
-  submit.disabled = true;
-  function matchPassword() {
-    var pass1 = document.getElementById("new").value;
-    var pass2 = document.getElementById("again").value;
-    var error = document.getElementById("message");
-    error.innerText = "Enter identical password on both fields.";
+<!-- <script th:src="@{/js/validate.js}" type="text/javascript"></script> -->
+<script>
+	var signup = document.getElementById("signup-form");
+	var submitBtn = document.getElementById("submitBtn");
+	var error = document.getElementById("message");
+	var password = document.getElementById("password");
+	var cpassword = document.getElementById("cpassword");
+	cpassword.addEventListener("keyup", matchPassword);
 
-    if (pass1 === pass2) {
-      error.innerText = "";
-      submit.disabled = false;
-    }
-  }
+	function matchPassword() {
+		error.innerText = "Enter identical password on both fields.";
+		let pass = password.value;
+		let cpass = cpassword.value;
+		console.log(pass);
+		if (pass === cpass) {
+			error.innerText = " ";
+			submitBtn.disabled = false;
+		} else {
+			submitBtn.disabled = true;
+		}
+	}
+	signup.addEventListener("submit", (e) => {
+		e.preventDefault();
+		if (registerValidate() == true) {
+			signup.submit();
+		}
+	});
+
+	registerValidate = () => {
+		let pass = password.value;
+		let cpass = cpassword.value;
+
+		let passwordcheck = /^(?=.*[0-9])(?=.*[!@#$%^*])[a-zA-Z0-9!@#$%^&*]{8,16}$/;
+		if (pass.length < 8) {
+			document.getElementById("message").innerHTML =
+				"** Password must be atleast 8 characters";
+			return false;
+		}
+		if (passwordcheck.test(pass)) {
+			document.getElementById("message").innerHTML = " ";
+		} else {
+			document.getElementById("message").innerHTML =
+				"** A valid must contain atleast 1 number and 1 special character";
+			return false;
+		}
+
+		if (pass !== cpass) {
+			document.getElementById("message").innerHTML =
+				"** Password Not matched";
+			return false;
+		}
+		return true;
+	};
 </script>
 
 </html>
