--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -36,84 +36,111 @@
                     <!-- <span id="password-error"> ** password</span> -->
                     <input class='input__box' type="password" placeholder='Password' id="password" name="password" />
                     <input class='input__box' type="password" placeholder='Confirm Password' id="cpassword" name="c_password" />
-                    <input class='btn btn-primary btn__login' type="submit" value='Sign Up'  />
+                    <span id="message" style="color:red; font-size:12px; padding-top: 0px; background-color: transparent;">&nbsp;</span>
+                    <input class='btn btn-primary btn__login' type="submit" value='Sign Up' id="submitBtn"/>
                 </form>
             </div>
         </div>
     </section>
     <footer th:insert="fragment/footer.html :: footer"></footer>
 
+    <!-- <script th:src="@{/js/valiate.js}" type="text/javascript"></script> -->
     <script>
-        document.getElementById('signup-form').addEventListener('submit', e => {
+        var signup = document.getElementById("signup-form");
+        var fname = document.getElementById('fname').value;
+        var lname = document.getElementById('lname').value;
+        var mobile = document.getElementById('mobile').value;
+        var address = document.getElementById('address').value;
+        var password = document.getElementById('password');
+        var cpassword = document.getElementById('cpassword');
+        var submitBtn = document.getElementById("submit");
+        var error = document.getElementById("message");
+
+        cpassword.addEventListener("keyup", matchPassword);
+
+
+        function matchPassword() {  
+            error.innerText = "Enter identical password on both fields.";
+            let pass = password.value;
+            let cpass = cpassword.value;
+            console.log(pass);
+            if (pass === cpass) {
+                error.innerText = " ";
+                submitBtn.disabled = false;
+            }
+            else {
+                submitBtn.disabled = true;
+            }
+        }
+
+        signup.addEventListener('submit', e => {
             e.preventDefault();
             if(registerValidate()==true){
-                document.getElementById('signup-form').submit();
+                signup.submit();
             }
         });
 
         registerValidate = ()=>{
-            let fname = document.getElementById('fname').value;
-            let lname = document.getElementById('lname').value;
-            let mobile = document.getElementById('mobile').value;
-            let address = document.getElementById('address').value;
-            let password = document.getElementById('password').value;
-            let cpassword = document.getElementById('cpassword').value;
+            let pass = password.value;
+            let cpass = cpassword.value;
 
+            console.log("inside register validate");
             let fnamecheck = /^[a-zA-Z]{3,}$/;
             let lnamecheck = /^[a-zA-Z]{3,}$/;
             let mobilecheck = /^9[678]\d{8}$/;
             let addresscheck = /^[a-zA-Z0-9\s,-]{3,}$/;
             let passwordcheck = /^(?=.*[0-9])(?=.*[!@#$%^*])[a-zA-Z0-9!@#$%^&*]{8,16}$/;
-
+            
+            document.getElementById('error-msg').innerHTML = " ";
             if(fnamecheck.test(fname)){
-                document.getElementById('error-msg').innerHTML = "";
+                document.getElementById('error-msg').innerHTML = " ";
             }else{
-
                 document.getElementById('error-msg').innerHTML = "** Enter valid first name";
                 return false;
             }
 
             if(lnamecheck.test(lname)){
-                document.getElementById('error-msg').innerHTML = "";
+                document.getElementById('error-msg').innerHTML = " ";
             }else{
                 document.getElementById('error-msg').innerHTML = "** Enter valid lastname";
                 return false;
             }
 
             if(mobilecheck.test(mobile)){
-                document.getElementById('error-msg').innerHTML = "";
+                document.getElementById('error-msg').innerHTML = " ";
             }else{
                 document.getElementById('error-msg').innerHTML = "** Enter valid mobile number";
                 return false;
             }
 
             if(addresscheck.test(address)){
-                document.getElementById('error-msg').innerHTML = "";
+                document.getElementById('error-msg').innerHTML = " ";
             }else{
                 document.getElementById('error-msg').innerHTML = "** Enter valid address";
                 return false;
             }
 
-            if(passwordcheck.test(password)){
-                document.getElementById('error-msg').innerHTML = "";
-            }else{
-                document.getElementById('error-msg').innerHTML = "** Enter valid password";
-                return false;
-            }
-            if(password.length < 8){
+            if(pass.length < 8){
                 document.getElementById('error-msg').innerHTML = "** Password must be atleast 8 characters";
                 return false;
             }
 
-            if(password !== cpassword){
+            if(passwordcheck.test(pass)){
+                document.getElementById('error-msg').innerHTML = " ";
+            }else{
+                document.getElementById('error-msg').innerHTML = "** A valid must contain atleast 1 number and 1 special character";
+                return false;
+            }
+
+
+            if(pass !== cpass){
                 document.getElementById('error-msg').innerHTML = "** Password Not matched";
                 return false;
             }
-            console.log("success");
+            
             return true;
         };
     </script>
-
     
 </body>
 
